Minor spacing tweaks, and bug fixes - added title hover animation

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -29,4 +29,37 @@
   .next-button {
     @apply absolute z-10 top-0 bottom-0 w-1/2 h-[calc(100%-76px)];
   }
+  .title:hover .hand-wiggle {
+    animation-name: wave-animation;
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite;
+    transform-origin: 70% 70%;
+    display: inline-block;
+  }
+  @keyframes wave-animation {
+    0% {
+      transform: rotate(0deg);
+    }
+    10% {
+      transform: rotate(14deg);
+    }
+    20% {
+      transform: rotate(-8deg);
+    }
+    30% {
+      transform: rotate(14deg);
+    }
+    40% {
+      transform: rotate(-4deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+    60% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
 }
